2008-04-17  Adam Roben  <aroben@apple.com>

        Don't wait for the hang timer twice in the case of a hang

        Previously we'd wait for a hang while reading both stdout and stderr
        from DRT. Now we'll only wait for one or the other.

        Reviewed by Anders Carlsson.

        * Scripts/run-webkit-tests:
        (top level): Don't wait for stderr to time out if stdout already timed
        out.
        (readFromDumpToolWithTimer): If $dontWaitForTimeOut is true, quit
        after the first read that returns no data.

2008-04-17  Adam Roben  <aroben@apple.com>

        Don't throw away the output from timed out tests

        Reviewed by Anders Carlsson.

        * Scripts/run-webkit-tests:
        (top level): Updated for changes to readFromDumpToolWithTimer.
        (readFromDumpToolWithTimer): Return a hash that contains both the
        output and whether or not the test timed out.

2008-04-17  Adam Roben  <aroben@apple.com>

        Make the hang timer 60 seconds

        * Scripts/run-webkit-tests:

2008-04-17  Adam Roben  <aroben@apple.com>

        Get rid of carriage returns in DRT/win's stderr

        Reviewed by Eric Seidel.

        * DumpRenderTree/win/DumpRenderTree.cpp:
        (main): Mark stderr as binary like we already do for stdout.

2008-04-17  Adam Roben  <aroben@apple.com>

        Fix Bug 17678: run-webkit-tests should have a watchdog timer (and
        timeout long tests)

        <https://bugs.webkit.org/show_bug.cgi?id=17678>

        We now abort tests that take longer than 60 seconds to produce output.
        This matches the watchdog timer in DRT/mac and DRT/win (which we can
        now remove).

        Reviewed by Eric Seidel.

        * Scripts/run-webkit-tests:
        (top level): Read DRT's output using the new readFromDumpToolWithTimer
        subroutine. If readFromDumpToolWithTimer returns undefined it means
        the test timed out, so we register the test as a hang and move on.